syntax = "proto3";

option go_package = "./pkg/pb";

package proto;

message SendNotificationRequest {
  string idempotent_key = 1;
  uint64 user_id = 2;
}

message SendNotificationResponse {
  optional string message = 1;
}

message User {
  uint64 id = 1;
  uint32 age = 3;
  string name = 2;
  string email = 4;
}