syntax = "proto3";

package proto;

option go_package = "./pkg/pb";

import "messages.proto";

service NotificationService {
  rpc SendNotification (SendNotificationRequest) returns (SendNotificationResponse);
}